optimize(question-service): 优化为聚合查询